unpackaged/main/default/objects/Estimation__c/Estimation__c.object-meta.xml
<CustomObject>
    <label>Maintenance Estimation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estimations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>