unpackaged/main/default/objects/Estimation__c/fields/Customer_requirement__c.field-meta.xml
<CustomField>
    <fullName>Customer_requirement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer requirement</label>
    <length>225</length>
    <type>Text</type>
</CustomField>