unpackaged/main/default/objects/Estimation__c/fields/Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Due_Amount__c</fullName>
    <label>Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>