unpackaged/main/default/objects/Estimation__c/fields/Estimate_No__c.field-meta.xml
<CustomField>
    <fullName>Estimate_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimate No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>