unpackaged/main/default/objects/Estimation__c/fields/Estimator__c.field-meta.xml
<CustomField>
    <fullName>Estimator__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>