unpackaged/main/default/objects/Estimation__c/fields/Internal_No__c.field-meta.xml
<CustomField>
    <fullName>Internal_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>