unpackaged/main/default/objects/Estimation__c/fields/Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Invoiced__c</fullName>
    <label>Invoiced</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Not Invoiced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>