unpackaged/main/default/objects/Estimation__c/fields/KM__c.field-meta.xml
<CustomField>
    <fullName>KM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KM</label>
    <length>225</length>
    <type>Text</type>
</CustomField>