unpackaged/main/default/objects/Estimation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Estimations</relationshipLabel>
    <relationshipName>Estimations</relationshipName>
    <type>Lookup</type>
</CustomField>