unpackaged/main/default/objects/Estimation__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Mode</label>
    <length>225</length>
    <type>Text</type>
</CustomField>