unpackaged/main/default/objects/Estimation__c/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>