unpackaged/main/default/objects/Estimation__c/fields/Service_Description__c.field-meta.xml
<CustomField>
    <fullName>Service_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>