unpackaged/main/default/objects/Estimation__c/fields/Service_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Request Date</label>
    <type>DateTime</type>
</CustomField>