unpackaged/main/default/objects/Estimation__c/fields/Vehicle_Delivered_On__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Delivered_On__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Delivered On</label>
    <type>DateTime</type>
</CustomField>