unpackaged/main/default/objects/Estimation__c/fields/Vehicle_Info__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Info</label>
    <length>225</length>
    <type>Text</type>
</CustomField>