unpackaged/main/default/objects/Estimation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Internal_No__c</columns>
    <columns>Estimator__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Net_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>